# NdkLearn

./: .gitmodules  build.gradle  gradle.properties  settings.gradle
ConsoleLog/: build.gradle
ConsoleLog/src/main/cpp/: CMakeLists.txt  jni_util.h  jni_weak_ref.h  log.cpp  log_level.h  logging.cc  logging.h  macros.h  scoped_java_ref.cc  scoped_java_ref.h  string_conversion.cc
ConsoleLog/src/main/java/com/mgg/log/: ConsoleLogging.kt  Logger.kt
ConsoleLog/src/test/java/com/mgg/log/: ExampleUnitTest.kt
FileLog/: build.gradle
FileLog/src/androidTest/java/com/mgg/filelog/: ExampleInstrumentedTest.kt
FileLog/src/main/: AndroidManifest.xml
FileLog/src/main/cpp/: CMakeLists.txt  filelog.cpp  log.cc  log.h  log_android.cc  log_android_callback.cc  logger.cc  logger.h  mutex_pthread.cc
FileLog/src/main/cpp/include/firebase/internal/: mutex.h
FileLog/src/main/java/com/mgg/filelog/: FileLogging.kt  Log.kt
FileLog/src/test/java/com/mgg/filelog/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  io_realm_internal_NativeObjectReference.cpp  io_realm_internal_core_NativeRealmAny.cpp  native-lib.cpp
app/src/main/cpp/variant/: android_util.cc  variant.cc  variant.h
app/src/main/java/com/mgg/ndk/: App.kt  (+1 more)
breakpad/: build.gradle
breakpad/src/main/: AndroidManifest.xml
breakpad/src/main/cpp/: CMakeLists.txt  breakpad.cpp
gradle/wrapper/: gradle-wrapper.properties
log/: build.gradle
log/src/main/: AndroidManifest.xml
log/src/main/cpp/: CMakeLists.txt  build_config.h  jni_util.cc  jni_util.h  jni_weak_ref.cc  library_loader.cc  log.cpp  log_settings.cc  log_settings.h  log_settings_state.cc  logging.cc  logging.h  scoped_java_ref.cc  scoped_java_ref.h  string_conversion.cc  string_conversion.h  thread_local.cc  thread_local.h
variant/: build.gradle
variant/src/main/: AndroidManifest.xml
variant/src/main/cpp/: CMakeLists.txt  io_realm_internal_core_NativeRealmAny.cpp  log_utils.h  native-lib.cpp
variant/src/main/cpp/qtbase/: qandroidjnienvironment.cpp  qandroidjnienvironment.h  qandroidjniobject.cpp  qandroidjniobject.h  qglobal.h  qjni.cpp  qjni_p.h  qjnihelpers.cpp  qjnihelpers_p.h  qjnionload.cpp
variant/src/main/cpp/variant/: android_util.cc  android_util.h  variant.cc
(+17 files in other folders)
